--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="RED_A700">#D50000</color>
+    <color name="RED_900">#B71C1C</color>
+    <color name="GRAY_300">#E0E0E0</color>
+    <color name="WHITE">#FFFFFF</color>
+    <color name="GRAY_50">#FAFAFA</color>
+    <color name="BLACK">#FF000000</color>
+    <color name="GRAY_900">#212121</color>
 </resources>
