--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.ProjectMarvel" parent="android:Theme.Material.Light.NoActionBar" >
-        <item name="colorPrimary">@color/RED_900</item>
-        <item name="colorPrimaryVariant">@color/RED_A700</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-    </style>
+    <style name="Theme.ProjectMarvel" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
